Modified the video speed solution to ensure that it never is too small for the text.

--- a/28 - Video Speed Controller/style.css
+++ b/28 - Video Speed Controller/style.css
@@ -36,4 +36,5 @@ video {
   padding:2px;
   color:white;
   height:16.3%;
+  min-height: 10%;
 }
